--- a/css/estilo.css
+++ b/css/estilo.css
@@ -73,7 +73,9 @@ ul.nav__ul li:hover ul {
 
 footer {
   background-image: linear-gradient(blue, blueviolet);
-  margin: 0; }
+  margin: 0;
+  overflow: auto;
+}
 
 .footerList {
   margin: 0 auto;
@@ -105,15 +107,19 @@ footer {
   color: whitesmoke;
   text-decoration: none;
   font-weight: bold; }
+  .li {
+    color: whitesmoke;
+    text-decoration: none;
+    font-weight: bold; }
 
 .titleHome {
   color: black;
-  font-size: 90px;
+  font-size: 60px;
   font-weight: bold;
   text-transform: none;
   text-align: center;
   margin-bottom: 20px;
-  padding: 30px 20px 0px 20px; }
+  padding: 30px 60px 0px 60px; }
 
 .text__Home {
   color: black;
@@ -153,6 +159,11 @@ footer {
 	flex-direction: row;
 	padding: 2em;
 }
+.aboutMe{
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
 .sobreMi{
     display: inline-block;
     margin: 20px;  
@@ -161,8 +172,8 @@ footer {
     background-color: #f9f9f9;
     border-style: solid;
     line-height:25px;
-	width: 500px;
-	height: 300px;
+	width: 640px;
+	height: 400px;
 	padding: 40px;
 }
 .habilidades{
@@ -177,4 +188,161 @@ footer {
 .habilidades h3{
   text-align: center;
   margin-bottom: 10px;
+}
+
+
+
+/*CONTACTAME*/
+
+#formulario{
+  padding-top:2em;
+  justify-content: center;
+  font-family: 'Kumbh Sans', sans-serif;
+}
+.contactForm{
+  padding: 70px 255px 50px 255px;
+  text-align: center;
+  background-color: blue;
+  color: white;
+  font-size: 1.5em;
+}
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: black;
+  font-size: 0.875em;
+}
+
+input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
+  color: black;
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: blue;
+  font-size: 0.875em;
+}
+
+input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
+  color: blue;
+}
+
+input::placeholder, textarea::placeholder {
+  color: blue;
+  font-size: 0.875em;
+}
+
+input:focus::placeholder, textarea::focus:placeholder {
+  color: blue;
+}
+
+input::-ms-placeholder, textarea::-ms-placeholder {
+  color: blue;
+  font-size: 0.875em;
+}
+
+input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
+  color: blue;
+}
+
+/* on hover placeholder */
+
+input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
+  color: black;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
+  color: black;
+}
+
+input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
+  color: black;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
+  color: black;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: black;
+  font-size: 0.875em;
+}
+
+input:hover:focus::placeholder, textarea:hover:focus::placeholder {
+  color: black;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: black;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
+  color: black;
+}
+
+#form {
+  position: relative;
+  width: 500px;
+  margin: 50px auto 100px auto;
+}
+
+input {
+  font-size: 0.875em;
+  width: 470px;
+  height: 50px;
+  padding: 0px 15px 0px 15px;
+  
+  background: transparent;
+  outline: none;
+  color: black;
+  
+  border: solid 1px black;
+  border-bottom: none;
+  
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+input:hover {
+  background: blue;
+  color: blue;
+}
+
+textarea {
+  width: 470px;
+  max-width: 470px;
+  height: 110px;
+  max-height: 110px;
+  padding: 15px;
+  background: transparent;
+  outline: none;
+  color: black;
+  font-size: 0.875em;
+  border: solid 1px black;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+textarea:hover {
+  background: black;
+  color: #e2dedb;
+}
+
+#submit {
+  padding: 0;
+  margin: -5px 0px 0px 0px;
+  font-size: 0.875em;
+  color: black;
+  outline:none;
+  cursor: pointer;
+  border: solid 1px black;
+  border-top: none;
+}
+#submit:hover {
+  color: blue;
 }
