--- a/scss/_sobremi.scss
+++ b/scss/_sobremi.scss
@@ -3,6 +3,11 @@
 	flex-direction: row;
 	padding: 2em;
 }
+.aboutMe{
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
 .sobreMi{
     display: inline-block;
     margin: 20px;  
@@ -10,7 +15,21 @@
 .sobreMi article{
     background-color: #f9f9f9;
     border-style: solid;
-	width: 500px;
-	height: 300px;
+    line-height:25px;
+	width: 640px;
+	height: 400px;
 	padding: 40px;
+}
+.habilidades{
+  margin:70px;
+}
+.habilidades h4{
+  text-align: center;
+  font-size: 40px;
+  justify-content: center;
+  letter-spacing: 0.1em;
+}
+.habilidades h3{
+  text-align: center;
+  margin-bottom: 10px;
 }
