--- a/scss/formulario.scss
+++ b/scss/formulario.scss
@@ -9,7 +9,7 @@ $coloresTextos: black;
 .contactForm{
     height: $altura-contacto;
     padding: 70px 400px 50px 400px;
-    background-image: url("/Users/cristeltapia/Desktop/git/primerRepositorio/img/texture.jpeg");
+    background-image: url(texture.jpeg);
     background-position: center;
     text-align: center;
     color: $coloresTextos;
