--- a/scss/home.scss
+++ b/scss/home.scss
@@ -3,7 +3,7 @@ $coloresTextos: black;
 
 .home{
     color: $coloresTextos;
-    background-image: url("/Users/cristeltapia/Desktop/git/primerRepositorio/img/texture.jpeg");
+    background-image: url(texture.jpeg);
     background-position: center;
     padding-bottom: 50px;
     height: $altura-home;
