--- a/scss/sobremi.scss
+++ b/scss/sobremi.scss
@@ -1,7 +1,7 @@
 //SOBRE MI
 .aboutMe{
     padding-top: 90px;
-    background-image: url(/Users/cristeltapia/Desktop/git/primerRepositorio/img/TEXUTRE.jpeg);
+    background-image: url(TEXUTRE.jpeg);
     background-size: cover;
     padding-bottom: 30px;
     height: 40vh;
