--- a/css/estilo.css
+++ b/css/estilo.css
@@ -155,7 +155,7 @@ footer {
 
 @media (max-width: 1024px) and (min-width: 905px) {
   .home {
-    height: 29vh; }
+    height: 28vh; }
     .home .home__title {
       padding: 90px 100px 0px 100px;
       font-size: 2em; }
@@ -182,7 +182,7 @@ footer {
 
 @media (max-width: 419px) and (min-width: 0px) {
   .home {
-    height: 54vh; }
+    height: 50vh; }
     .home .home__title {
       padding: 90px 40px 0px 40px;
       font-size: 2em; }
@@ -344,7 +344,7 @@ textarea:hover {
 
 @media (max-width: 419px) and (min-width: 330px) {
   .contactForm {
-    height: 70vh;
+    height: 60vh;
     padding: 70px 40px 50px 40px; }
   #form {
     width: 50vw; }
@@ -432,7 +432,7 @@ textarea:hover {
 
 @media (max-width: 836px) and (min-width: 630px) {
   .aboutMe {
-    height: 50vh; }
+    height: 30vh; }
     .aboutMe .aboutMe__text {
       padding-left: 100px;
       padding-right: 100px; }
@@ -451,16 +451,32 @@ textarea:hover {
     width: 300px;
     height: auto; } }
 
-@media (max-width: 439px) and (min-width: 0px) {
+@media (max-width: 439px) and (min-width: 321px) {
   .aboutMe {
-    height: 70vh; }
+    height: 55vh; }
     .aboutMe .aboutMe__text {
-      padding-left: 50px;
-      padding-right: 50px; }
+      padding-left: 40px;
+      padding-right: 40px; }
   #miCV.sobreMi {
     width: 50vw; }
   .sobreMi article {
-    width: 200px;
+    width: 300px;
+    height: auto; }
+  .habilidades {
+    margin: 40px; }
+    .habilidades h4 {
+      font-size: 30px; } }
+
+@media (max-width: 319px) and (min-width: 0px) {
+  .aboutMe {
+    height: 50vh; }
+    .aboutMe .aboutMe__text {
+      padding-left: 40px;
+      padding-right: 40px; }
+  #miCV.sobreMi {
+    width: 50vw; }
+  .sobreMi article {
+    width: 300px;
     height: auto; }
   .habilidades h4 {
     font-size: 30px; } }
