agregar pagina servicios

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -106,7 +106,6 @@ footer {
   background-image: url(texture.jpeg);
   background-position: center;
   padding-bottom: 50px;
-  height: 55vh;
   text-align: center;
   border-bottom: solid black 1px; }
   .home__text {
@@ -154,38 +153,30 @@ footer {
     width: 50vh; } }
 
 @media (max-width: 1024px) and (min-width: 905px) {
-  .home {
-    height: 28vh; }
-    .home .home__title {
-      padding: 90px 100px 0px 100px;
-      font-size: 2em; }
+  .home .home__title {
+    padding: 90px 100px 0px 100px;
+    font-size: 2em; }
   .porta__Home img {
     width: 40vh; } }
 
 @media (max-width: 905px) and (min-width: 650px) {
-  .home {
-    height: 45vh; }
-    .home .home__title {
-      padding: 130px 100px 0px 100px;
-      font-size: 2em; }
+  .home .home__title {
+    padding: 130px 100px 0px 100px;
+    font-size: 2em; }
   .porta__Home img {
     width: 30vh; } }
 
 @media (max-width: 649px) and (min-width: 420px) {
-  .home {
-    height: 48vh; }
-    .home .home__title {
-      padding: 100px 80px 0px 80px;
-      font-size: 1.8em; }
+  .home .home__title {
+    padding: 100px 80px 0px 80px;
+    font-size: 1.8em; }
   .porta__Home img {
     width: 30vh; } }
 
 @media (max-width: 419px) and (min-width: 0px) {
-  .home {
-    height: 50vh; }
-    .home .home__title {
-      padding: 90px 40px 0px 40px;
-      font-size: 2em; }
+  .home .home__title {
+    padding: 90px 40px 0px 40px;
+    font-size: 2em; }
   .porta__Home img {
     width: 40vh; } }
 
@@ -196,7 +187,6 @@ footer {
   justify-content: center; }
 
 .contactForm {
-  height: 40vh;
   padding: 70px 400px 50px 400px;
   background-image: url(texture.jpeg);
   background-position: center;
@@ -330,12 +320,10 @@ textarea:hover {
 
 @media (max-width: 919px) and (min-width: 650px) {
   .contactForm {
-    height: 50vh;
     padding: 70px 100px 50px 100px; } }
 
 @media (max-width: 649px) and (min-width: 420px) {
   .contactForm {
-    height: 65vh;
     padding: 70px 70px 50px 70px; }
   #form {
     width: 50vw; }
@@ -344,7 +332,6 @@ textarea:hover {
 
 @media (max-width: 419px) and (min-width: 330px) {
   .contactForm {
-    height: 60vh;
     padding: 70px 40px 50px 40px; }
   #form {
     width: 50vw; }
@@ -353,7 +340,6 @@ textarea:hover {
 
 @media (max-width: 329px) and (min-width: 0px) {
   .contactForm {
-    height: 80vh;
     padding: 70px 40px 50px 40px; }
   #form {
     width: 50vw; }
@@ -389,7 +375,6 @@ textarea:hover {
   background-image: url(TEXUTRE.jpeg);
   background-size: cover;
   padding-bottom: 30px;
-  height: 40vh;
   text-align: center;
   border-bottom: solid black 1px; }
   .aboutMe .aboutMe__text {
@@ -431,20 +416,16 @@ textarea:hover {
     margin-bottom: 10px; }
 
 @media (max-width: 836px) and (min-width: 630px) {
-  .aboutMe {
-    height: 30vh; }
-    .aboutMe .aboutMe__text {
-      padding-left: 100px;
-      padding-right: 100px; }
+  .aboutMe .aboutMe__text {
+    padding-left: 100px;
+    padding-right: 100px; }
   #miCV.sobreMi {
     width: 50vw; } }
 
 @media (max-width: 629px) and (min-width: 440px) {
-  .aboutMe {
-    height: 55vh; }
-    .aboutMe .aboutMe__text {
-      padding-left: 50px;
-      padding-right: 50px; }
+  .aboutMe .aboutMe__text {
+    padding-left: 50px;
+    padding-right: 50px; }
   #miCV.sobreMi {
     width: 50vw; }
   .sobreMi article {
@@ -452,11 +433,9 @@ textarea:hover {
     height: auto; } }
 
 @media (max-width: 439px) and (min-width: 321px) {
-  .aboutMe {
-    height: 55vh; }
-    .aboutMe .aboutMe__text {
-      padding-left: 40px;
-      padding-right: 40px; }
+  .aboutMe .aboutMe__text {
+    padding-left: 40px;
+    padding-right: 40px; }
   #miCV.sobreMi {
     width: 50vw; }
   .sobreMi article {
@@ -468,11 +447,9 @@ textarea:hover {
       font-size: 30px; } }
 
 @media (max-width: 319px) and (min-width: 0px) {
-  .aboutMe {
-    height: 50vh; }
-    .aboutMe .aboutMe__text {
-      padding-left: 40px;
-      padding-right: 40px; }
+  .aboutMe .aboutMe__text {
+    padding-left: 40px;
+    padding-right: 40px; }
   #miCV.sobreMi {
     width: 50vw; }
   .sobreMi article {
@@ -480,3 +457,46 @@ textarea:hover {
     height: auto; }
   .habilidades h4 {
     font-size: 30px; } }
+
+.service-1 article, .service-2 article {
+  display: inline-table;
+  padding: 8vw;
+  border-bottom: 1px solid black; }
+  .service-1 article h3, .service-2 article h3 {
+    font-weight: 700;
+    font-size: 2em;
+    padding-right: 20px;
+    padding-left: 20px; }
+  .service-1 article h4, .service-2 article h4 {
+    font-size: 1em;
+    padding-right: 20px;
+    padding-left: 20px; }
+  .service-1 article p, .service-2 article p {
+    width: 80%;
+    padding-right: 20px;
+    padding-left: 20px; }
+  .service-1 article ul, .service-2 article ul {
+    padding-right: 20px;
+    padding-left: 50px; }
+
+.service-3 article {
+  display: inline-table;
+  padding: 8vw;
+  border-bottom: 1px solid black;
+  border-bottom: none; }
+  .service-3 article h3 {
+    font-weight: 700;
+    font-size: 2em;
+    padding-right: 20px;
+    padding-left: 20px; }
+  .service-3 article h4 {
+    font-size: 1em;
+    padding-right: 20px;
+    padding-left: 20px; }
+  .service-3 article p {
+    width: 80%;
+    padding-right: 20px;
+    padding-left: 20px; }
+  .service-3 article ul {
+    padding-right: 20px;
+    padding-left: 50px; }
