--- a/css/estilo.css
+++ b/css/estilo.css
@@ -434,7 +434,7 @@ textarea:hover {
     width: 300px;
     height: auto; } }
 
-@media (max-width: 439px) and (min-width: 321px) {
+@media (max-width: 439px) and (min-width: 320px) {
   .aboutMe .aboutMe__text {
     padding-left: 40px;
     padding-right: 40px; }
@@ -460,45 +460,44 @@ textarea:hover {
   .habilidades h4 {
     font-size: 30px; } }
 
-.service-1 article, .service-2 article {
+.service-1 article, .service-2 article, .service-3 article {
   display: inline-table;
   padding: 8vw;
   border-bottom: 1px solid black; }
-  .service-1 article h3, .service-2 article h3 {
+  .service-1 article h3, .service-2 article h3, .service-3 article h3 {
     font-weight: 700;
     font-size: 2em;
     padding-right: 20px;
     padding-left: 20px; }
-  .service-1 article h4, .service-2 article h4 {
+  .service-1 article h4, .service-2 article h4, .service-3 article h4 {
     font-size: 1em;
     padding-right: 20px;
     padding-left: 20px; }
-  .service-1 article p, .service-2 article p {
+  .service-1 article p, .service-2 article p, .service-3 article p {
     width: 80%;
     padding-right: 20px;
     padding-left: 20px; }
-  .service-1 article ul, .service-2 article ul {
+  .service-1 article ul, .service-2 article ul, .service-3 article ul {
     padding-right: 20px;
     padding-left: 50px; }
 
-.service-3 article {
-  display: inline-table;
-  padding: 8vw;
-  border-bottom: 1px solid black;
-  border-bottom: none; }
-  .service-3 article h3 {
-    font-weight: 700;
-    font-size: 2em;
-    padding-right: 20px;
-    padding-left: 20px; }
-  .service-3 article h4 {
-    font-size: 1em;
-    padding-right: 20px;
-    padding-left: 20px; }
-  .service-3 article p {
-    width: 80%;
-    padding-right: 20px;
-    padding-left: 20px; }
-  .service-3 article ul {
-    padding-right: 20px;
-    padding-left: 50px; }
+.w-100 {
+  height: 40vh; }
+
+@media (max-width: 768px) and (min-width: 469px) {
+  .w-100 {
+    height: 60vh; }
+  .d-none {
+    display: block !important; } }
+
+@media (max-width: 468px) and (min-width: 320px) {
+  .w-100 {
+    height: 80vh; }
+  .d-none {
+    display: block !important; } }
+
+@media (max-width: 320px) and (min-width: 0px) {
+  .w-100 {
+    height: 100vh; }
+  .d-none {
+    display: block !important; } }
