minor changes responsive

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -482,30 +482,42 @@ textarea:hover {
     padding-left: 50px; }
 
 .w-100 {
-  height: 40vh; }
+  height: 30vh; }
 
 .testimoniesTitle {
   font-weight: 700;
   text-align: center;
   padding-top: 30px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   background-color: #fefbf7;
   margin: 0; }
 
+@media (max-width: 3000px) and (min-width: 1281px) {
+  .w-100 {
+    height: 40vh; }
+  .d-none {
+    display: block !important; } }
+
+@media (max-width: 1280px) and (min-width: 769px) {
+  .w-100 {
+    height: 40vh; }
+  .d-none {
+    display: block !important; } }
+
 @media (max-width: 768px) and (min-width: 469px) {
   .w-100 {
-    height: 60vh; }
+    height: 70vh; }
   .d-none {
     display: block !important; } }
 
 @media (max-width: 468px) and (min-width: 320px) {
   .w-100 {
-    height: 80vh; }
+    height: 100vh; }
   .d-none {
     display: block !important; } }
 
-@media (max-width: 320px) and (min-width: 0px) {
+@media (max-width: 319px) and (min-width: 0px) {
   .w-100 {
-    height: 100vh; }
+    height: 120vh; }
   .d-none {
     display: block !important; } }
